--- a/pxshop/pxpayment/templates/index.html
+++ b/pxshop/pxpayment/templates/index.html
@@ -1,36 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block section1 %}
     <h1>
-        Hello PX Shop
+        Hello {{ user }}
     </h1>
-    <h2>
-        {{user}}
-    </h2>
-    <p>
-        {% for data in buyers %}
-        {{data.firstname}}
-        {{data.surname}}
-        {{data.generation}}
-        {% endfor %}
-    </p>
-    <p>
-        {% for transaction in transactions %}
-        {{transaction.transaction_id}} <br />
-        {{transaction.buyer.firstname}} <br />
-
-            {% for item in transaction.product.all %}
-                รายการ: {{item.productName}}<br />
-                รายละเอียด: {{item.productDes}}<br />
-                ราคา: {{item.price}}<br />
-            {% endfor %}
-        <br />
-        {% endfor %}
-    </p>
-</body>
-</html>
+{% endblock %}
