--- a/pxshop/pxpayment/templates/base.html
+++ b/pxshop/pxpayment/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'messages.html' %}
     <title>PX Payment</title>
+    <!-- Bootstrap core CSS -->
+    <link href="{% static '/bootstrap-5.0.2-dist/css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
     <!-- ***** Header Area Start ***** -->
