--- a/pxshop/pxpayment/templates/base.html
+++ b/pxshop/pxpayment/templates/base.html
@@ -8,41 +8,9 @@
     <title>PX Payment</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static '/bootstrap-5.0.2-dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static '/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js' %}"></script>
 </head>
 <body>
-    <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                  <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
-                      <a href="/#top" class="logo">
-                          ระบบร้านค้า PX
-                      </a>
-                      <!-- ***** Logo End ***** -->
-                      <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
-                          <li>
-                             <a href="/#top" class="active">หน้าหลัก</a>
-                          </li>
-                          {% if user.is_authenticated %}
-                          <li>
-                             <a href="/logout/">ออกจากระบบ</a>
-                          </li>
-                          {% else %}
-                          <li>
-                             <a href="/login/">เข้าสู่ระบบ</a>
-                          </li> 
-                          {% endif %}
-                      </ul>        
-                      <!-- ***** Menu End ***** -->
-                  </nav>
-              </div>
-          </div>
-      </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
     {% block section1 %}
     {% endblock %}
 </body>
