--- a/pxshop/pxpayment/templates/indexV2.html
+++ b/pxshop/pxpayment/templates/indexV2.html
@@ -1,45 +1,43 @@
+{% extends 'base.html' %}
 {%load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% include 'messages.html' %}
-    <title>PX Payment</title>
-    <!-- Bootstrap core CSS -->
-    <link href="{% static '/bootstrap-5.0.2-dist/css/bootstrap.min.css' %}" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="display-1 text-center text-primary"><b>PX Payment</b></h1>
-        <p class="text-center"><b>ระบบชำระเงินของ PX Shop ร้อย.ทย.รร.นนก.</b></p>
-    </div>
-    
-    <div class="container text-center">
-        <img src="{% static 'images/4548592-removebg-preview.png' %}" alt="" style="max-width: 300px;" class="img-fluid">
-    </div>
+{% block section1 %}
+<div class="container mt-5">
+    <h1 class="display-1 text-center text-primary"><b>PX Payment</b></h1>
+    <p class="text-center"><b>ระบบชำระเงินของ PX Shop ร้อย.ทย.รร.นนก.</b></p>
+</div>
 
-    <div class="container d-flex justify-content-center align-items-center">
-    <div class="card p-4 shadow" style="max-width: 400px; width: 100%;">
-      <h2 class="text-center mb-4">เข้าสู่ระบบร้านค้า</h2>
-      <form action="/login" method="POST">
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" required autofocus>
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <div class="d-grid">
-          <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-        <div class="mt-3 text-center">
-          <a href="#">Forgot password?</a>
-        </div>
-      </form>
-    </div>
-  </div>
+<div class="container text-center">
+    <img src="{% static 'images/4548592-removebg-preview.png' %}" alt="" style="max-width: 300px;" class="img-fluid">
+</div>
 
-</body>
+<div class="container d-flex justify-content-center align-items-center">
+<div class="card p-4 shadow" style="max-width: 400px; width: 100%;">
+  {% if user.is_authenticated %}
+  <h2 class="text-center mb-4"> {{ user.username }} </h2>
+  <div class="d-grid mb-3">
+      <button type="submit" class="btn btn-primary"><a href="/logout/" style="color: #fff;">ออกจากระบบ</a></button>
+    </div>
+  {% else %}
+  <h2 class="text-center mb-4">เข้าสู่ระบบร้านค้า</h2>
+  <form method="POST">
+    <div class="mb-3">
+      {% csrf_token %}
+      <label for="username" class="form-label">Username</label>
+      <input type="username" class="form-control" id="username" name="username" required autofocus>
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" name="password" required>
+    </div>
+    <div class="d-grid">
+      <button type="submit" class="btn btn-primary">Login</button>
+    </div>
+    <div class="mt-3 text-center">
+      <a href="#">Forgot password?</a>
+    </div>
+  </form>
+  {% endif %}
+</div>
+</div>
 </html>
+{% endblock %}
